updated overheard, it's one word

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="background-image"></div>
 
     <div class="banner">
-      <h1>Over Heard In DevOps</h1>
+      <h1>Overheard In DevOps</h1>
       <p>Anon Tweets Of DevOps Engineers</p>
     </div>
 
